Correction to header spacing

--- a/blocks/form.css
+++ b/blocks/form.css
@@ -39,7 +39,8 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
-  color: #2f80ed;
+  background-color: #2f80ed;
+  color: #ffffff;
   border: 0px;
   padding: 0;
 }
