--- a/blocks/header.css
+++ b/blocks/header.css
@@ -25,9 +25,6 @@
   font-weight: 500;
   font-size: 60px;
   line-height: 72px;
-  display: flex;
-  gap: 28px;
-  flex-direction: column;
 }
 
 .header__span-accent {
